[CDCTF-334] iceberg-kafka-connect v2 핵심 기능 개발 (#2)
* Custom EventType 추가

* Http Client 모듈 및 Alert 추가

* KerberosAuthManager 추가

* FIELD_ID_TO_CLASS 항목 추가

* fix checkstyle

* DebeziumTransform 수정
* $__source의 사용처는?

* IcebergSinkConfig 수정

* CMDB 관련 컴포턴트 추가

* 최신 브랜치 변경사항 반영

* metric 모듈 추가

* debezium 디펜던시 추가

* IcebergSinkTask 수정

* spotlessApply 수행 (lint)

* Channel 변경사항 반영

* CommitState 변경사항 반영

* CommitterImpl 변경사항 반영
* receive 함수가 ComiiterImpl -> Channel의 abstract 함수로 변경됨

* translator package 추가

* spotlessApply

* package tabular -> apache로 변경

* Coordinator 및 연관 모듈 수정

* TaskImpl 관련 구현

* Worker 주요 로직 구현

* RecordConverter 변경

* SchemaUtils 변경

* java compile 버전을 17로 변경

* build 에러 개선

* 1차 테스트 추가

* CDCTF-351 패치 적용

* 2차 테스트 추가

* kerberosAuthManager mocking 추가

* transforms이 설정되지 않았을 경우 보완

* 오타 수정

* iceberg.hadoop-conf-dir 가 없을 경우 그냥 null을 리턴하도록 변경

* mockAuthManager의 executeWithAuth Mocking

* TestWorker 정상화

* TestRecordConverter 정상화

* TestSinkWriter 정상화

* fixtures 위치 변경

* Fix CmdbManagerTest
* com.fasterxml.jackson.databind.exc.InvalidDefinitionException: Conflicting property-based creators: already had implicit creator [constructor for
  `org.apache.iceberg.connect.cmdb.dto.ddl.request.DdlExecutionRequest` (4 args), annotations: [null], encountered another: [constructor for `org.apache.iceberg.connect.cmdb.dto.ddl.request.DdlExecutionRequest` (3 args),
   annotations: [null]

* spotlessApply

* watchcenter id 의 기본값을 삭제하고 HADOOP_CLUSTER_NAME config 추가
 * integration test 시 실제 메세지 발송을 하지 않기 위함

* 초기화 순서 변경 및 authManager가 null일 경우 일반적인 실행으로 변경

* convertTimezoneRequired를 null-safe 하게 받도록 변경

* Integration Test가 동작하도록 수정

* 데이터 중복 적재 이슈 해결

* header 바이트 벨류 toString 이슈 fix

* Alert 표시를 test에서 formattedMessage로 보이도록 변경

* connector가 종료될때 localApiServer가 종료될 필요는 없음

* 임시 커밋. 테스트 둘다 안됨

* spotlessApply

* IcebergWriter Exception 구문 보완

* 16자리가 넘어